<resources>

    <string name="home">Home</string>
    <string name="progress">Records</string>
    <string name="exercise">exercises </string>
    <string name="profile">profile</string>

    <string name="channel_name"> Carefit Channel</string>
    <string name="channel_description">This is carefit channel</string>


    <string name="home_screen">home screen</string>
    <string name="app_name">CareFit</string>


    <string name="empty_exercise_list_text">No exercises to display</string>
    <string name="change_preferences">Change Preferences</string>
    <string name="enter_yourname">Your Name</string>
    <string name="enter_theirname">Their Name</string>
    <string name="save_settings">Save Settings</string>
    <string name="enter_your_name">Enter your first name:</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_patients_name">Enter your care-recipients name:</string>
    <string name="their_name">Their Name</string>
    <string name="next_btn_txt">Next</string>
    <string name="together_question">Are you interested in exercising together?</string>
    <string name="exercise_preference_text">Select the exercises you are interested in</string>
    <string name="back_btn_txt">Back</string>
    <string name="patient_name_error">Please fill in their name</string>
    <string name="your_name_error">Please fill in your name</string>
    <string name="pop_up_placeholder">PLACEHOLDER TEXT: IF YOU SEE THIS SOMETHING WENT WRONG</string>

    <string name="welcome_message">Hi there, %1$s! This app will help you to
    fit more exercise into your daily life</string>
    <string name="preferences_btn">Preferences</string>
    <string name="reminders_btn">Reminders</string>
    <string name="settings_btn">Settings</string>
    <string name="back_btn">Back</string>
    <string name="add_reminder_btn">Add Reminder</string>
    <string name="no_reminders_set">No reminders set!</string>
    <string name="repeat_weekly">Repeat Weekly?</string>
    <string name="set_reminder_btn">Set Reminder</string>
    <string name="warning_no_categories">No categories</string>
    <string name="filter_exercises_btn">Filter</string>
    <string name="save_btn_txt">Save</string>
    <string name="start_text">Start</string>
    <string name="pause_text">Pause</string>
    <string name="reset_text">Reset</string>
    <string name="test_paragraph_text">TEST PARAGRAPH</string>
    <string name="default_title_text">Default Title</string>
    <string name="unstarted_timer_text">0:00:000</string>
    <string name="no_exercise_data_text">No exercises found. De-select some of your filters and try again.</string>
    <string name="edit_btn_txt">Edit</string>
    <string name="delete_btn_tct">Delete</string>
    <string name="delete_btn_txt">Delete</string>
    <string name="new_reminder_title">New Reminder</string>
    <string name="set_first_reminder_text">Let\'s set your first reminder</string>
    <string name="set_btn">Set</string>

    <string name="set_btn_txt">Apply </string>
    <string name="records_btn">Records</string>
    <string name="no_records_text">No records.</string>
    <string name="set_repeating">Set Repeating:</string>
    <string name="never_radio">Never</string>
    <string name="daily_radio">Daily</string>
    <string name="weekly_radio">Weekly</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="set_days">Set Days</string>
    <string name="welcome_title">Welcome to CareFit</string>
    <string name="change_preferences_message">You can change these later from the Profile page</string>
    <string name="exercise_preferences_title">Exercise Preferences</string>
    <string name="error_select_day">You must select at least one day.</string>
    <string name="reminders_message">You can set more later from the Reminders menu</string>
    <string name="leave_all_unchecked_string">Or leave all boxes unchecked to see all exercises</string>
    <string name="select_one_text">You must select at least one category.</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="search_page_text"> </string>


    //for fragment_instructions_box.xml
    <string name="arrowLeft"> &#60; </string>
    <string name="arrowRight"> > </string>
    <string name="title_activity_create_workout">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="notifications_header">Reminders</string>
    <string name="sync_header">Sync</string>


    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
