<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/exercise_list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="vertical"
        android:padding="4sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Intensity Guide"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/greenbg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/low"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/orangebg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mid"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/redbg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/high"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/no_items_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercise_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="660dp"
        tools:listitem="@layout/exerciselist_recyclerview_item" />

</LinearLayout>


