<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:padding="10sp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/instructions_image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/instructions_image"
                    android:layout_width="250sp"
                    android:layout_height="0dp"
                    android:src="@drawable/grapevine"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/instructions_timer"
                android:text="@string/unstarted_timer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instructions_image_layout"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="	#000000"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/instructions_startBtn"
                android:text="@string/start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructions_timer"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/instructions_pauseBtn"
                android:text="@string/pause_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/instructions_startBtn"
                android:layout_alignBottom="@id/instructions_startBtn"
                android:layout_alignParentEnd="true"
                android:enabled="false"/>

            <LinearLayout
                android:id="@+id/instructions_frag_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/instructions_startBtn"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </ScrollView>



</LinearLayout>